Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16062

Different client and server timeouts during lock enqueue with BL AST set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      531.159590] LustreError: 10802:0:(ldlm_lockd.c:256:expired_lock_main()) ### lock callback timer expired after 99s: evicting client at 192.168.2.7@tcp  ns: mdt-lustre-MDT0002_UUID lock: ffff880967ce0480/0xd2e918f816df7d21 lrc: 3/0,0 mode: CR/CR res: [0x280000407:0x150:0x0].0x0 bits 0x9/0x0 rrc: 3 type: IBT flags: 0x60200400000020 nid: 192.168.2.7@tcp remote: 0x794bcb111018717d expref: 49 pid: 12233 timeout: 530 lvb_type: 0
      

      while client timeout is
      pb_timeout = 152,

      So, if the reply was lost the client doesn't have time to resend.

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: