lustre/include/lustre_net.h
@@ -2548,30 +2548,6 @@ ptlrpc_server_get_timeout(struct ptlrpc_service_part *svcpt)
 	       max_t(int, at, obd_timeout);
 }
 
-/**
- * Calculate the amount of time for lock prolongation.
- *
- * This is helper function to get the timeout extra time.
- *
- * @req		current request
- *
- * Return:	amount of time to extend the timeout with
- */
-static inline timeout_t prolong_timeout(struct ptlrpc_request *req)
-{
-	struct ptlrpc_service_part *svcpt = req->rq_rqbd->rqbd_svcpt;
-	timeout_t req_timeout = 0;
-
-	if (AT_OFF)
-		return obd_timeout / 2;
-
-	if (req->rq_deadline > req->rq_arrival_time.tv_sec)
-		req_timeout = req->rq_deadline - req->rq_arrival_time.tv_sec;
-
-	return max(req_timeout,
-		   at_est2timeout(at_get(&svcpt->scp_at_estimate)));
-}
-
 static inline struct ptlrpc_service *
 ptlrpc_req2svc(struct ptlrpc_request *req)
 {
