lustre/mdt/mdt_io.c
@@ -100,7 +100,7 @@ static void mdt_prolong_dom_lock(struct tgt_session_info *tsi,
 
 	ENTRY;
 
-	data->lpa_timeout = prolong_timeout(tgt_ses_req(tsi));
+	data->lpa_req = tgt_ses_req(tsi);
 	data->lpa_export = tsi->tsi_exp;
 	data->lpa_resid = tsi->tsi_resid;
 
